crates/cull-python/tests/fixtures/references/invalid_declarations/src/pkg/__init__.py
from .bad import use_before_global
